update tech and late policies

--- a/policy/assignments.tex
+++ b/policy/assignments.tex
@@ -7,7 +7,7 @@ This is a university course. All papers and other writing assignments
 should therefore be written at the university level. Submissions must be
 typewritten and double-spaced, should be free from error, and in this course
 should follow the \emph{SBL Handbook of Style} (refer to the free, online
-\href{http://sbl-site.org/assets/pdfs/sblhs_ss92804_revised_ed.pdf}{SBLHS
+\href{http://www.sbl-site.org/assets/pdfs/sblhs_ss92804_revised_ed.pdf}{SBLHS
 Student Supplement}.)
 
 If you ever struggle with composition---anything from the relatively simple
