--- a/policy/technology.tex
+++ b/policy/technology.tex
@@ -39,32 +39,36 @@ for course materials, and as a destination for your submission of PDFs
 \label{laptops}
 
 Use of laptops is forbidden in my classroom, except to facilitate presentation.
-I implement this policy in recognition of the cognitive costs of multitasking,
-with the aim of giving you and your peers the best chance of success. I hope as
-well to foster a culture of keen intellectual engagement.
+I implement this policy because of the cognitive costs of multitasking, with the
+aim of giving you and your peers the best chance of success. I also hope to
+foster a culture of keen intellectual engagement.
 
-As researchers at McMaster University recently demonstrated,
-``\href{http://dx.doi.org/10.1016/j.compedu.2012.10.003}{laptop multitasking
-hinders classroom learning for both users and nearby peers}.'' There's little
-new in their finding that the allegedly multitasking students do less well in
-class (11\% worse on the quiz in their experiment). This effect is well known.
-Rather, their novel discovery is that classmates \emph{without} laptops who sat
-with a \emph{view} of another student's screen did worse as well (17\% worse
-than those with no laptop in sight).
+As \href{http://dx.doi.org/10.1016/j.compedu.2012.10.003}{cognitive
+psychologists at McMaster and York Universities demonstrated in 2013}, ``laptop
+multitasking hinders classroom learning for both users and nearby peers.'' There
+is little new in their finding that the allegedly multitasking student does less
+well in class (11\% worse on the quiz in their experiment). This effect has been
+shown many times. Rather, their novel discovery is that classmates
+\emph{without} laptops who sat with a \emph{view} of another student's screen
+did worse than the students who had a computer (17\% worse than those with no
+laptop in sight).
 
-Prohibiting laptops is not the only possible response to these findings,
-but it fits with other pedagogical goals of mine. It also gives heavy
-laptop users an opportunity to experiement with different technologies in
-the classroom. (I'm a touch typist, but find hadwritten notes more useful
-because of the selectivity that goes into them.) There is even evidence that
+Prohibiting laptops is not the only possible response to these findings, but it
+fits with other pedagogical goals of mine. There is even evidence that
 \href{http://on.wsj.com/pjtJaK}{writing by hand} brings a number of cognitive
-benefits.
+benefits, and a \href{http://dx.doi.org/10.1177/0956797614524581}{2014 Princeton
+University study} ``found that students who took notes on laptops performed
+worse on conceptual questions than students who took notes longhand.'' If you
+are a heavy laptop user then consider this an opportunity to experiment with
+different technologies in the classroom. Personally, I find hadwritten notes
+more useful because of the selectivity that goes into them. I type up some
+important notes afterwards as a way of reviewing them.
 
 As for the myriad networked devices that many of us carry, it's a simple matter
-of professionalism to keep these things silent and out of sight. Kindles, Nooks
-and iPads are permitted \emph{only if they are used to display the assigned
-reading}. If this is you, let me invite you to put the machine in airplane mode
-while class is in session.
+of professionalism to keep these things silent and out of sight. E-readers
+(Kindles, Nooks, iPads, etc.) are permitted \emph{only if they are used to
+display the assigned reading}. If this is you, let me invite you to put the
+machine in airplane mode while class is in session.
 
 \subsubsection{Recording of Classes}
 \label{recording}
