--- a/policy/writing_centre.tex
+++ b/policy/writing_centre.tex
@@ -1,25 +1,21 @@
-\ProvidesFile{writing_centre.tex}[2013/08/19 v1.0 -- Course policy]
+\ProvidesFile{writing_centre.tex}[2014/08/04 v1.1 -- Course policy]
 
 \subsection{Tyndale Writing Centre}
 \label{writing_centre}
 
 Through a combination of tutorials, workshops and resources, Tyndale's Writing
 Centre offers a comprehensive program of writing support to Tyndale students,
-including individual 30-minute tutoring sessions, workshops, handbooks and
-other writing resources. Students may bring essays that have been graded (and,
-at least for my classes, work that is in process but has not yet been submitted
-for a grade) and will receive detailed suggestions for improving their writing.
-This service, at no charge to students, is available by appointment.
+including individual 30-minute tutoring sessions and guided access to a variety
+of writing tools. Students may bring in essays that have been graded (and, for
+my classes at least, work that is in process but has not yet been submitted for
+a grade) to receive detailed suggestions about how to improve their writing. The
+service is available by appointment and at no charge.
 
-Professors may recommend that a student go to the Writing Centre for help:
-students are strongly encouraged to follow such recommendations. The Academic
-Standards Committee may require an undergraduate student who is experiencing
-difficulty in his or her academic program to go to the Writing Centre for
-assistance and support.
-
-As someone who cares a great deal about writing, and was student director
-of his college Writing Center (\emph{sic}), I must emphasize that getting
-competent feedback on writing is not just for marginal students. Outstanding
-writers learn to crave good feedback. Think you don't need the Writing Centre?
-Make two appointments this semester. See if the service it provides might not
+Formal referrals to the Writing Center, which can come from professors or the
+Academic Standards Committee, may feel punitive. However, as someone who was
+once student director of his college's Writing Centre, and who sometimes uses
+Tyndale's for feedback on his own work in progress, I must emphasize that peer
+review is not just for marginal students. Experienced writers learn to crave
+good feedback. Think you don't need the Writing Centre? I challenge you to make
+two appointments this semester. See if the service it provides might not
 contribute to your education here after all.
