update OT 101 for Fall 2014 (v 7.0)

--- a/BSTH/1013.tex
+++ b/BSTH/1013.tex
@@ -16,11 +16,11 @@
 \email{ddriver@tyndale.ca}
 \officehours{Mon. \& Thur., 1:30--3:30 \PM}
 
-\semester{Winter 2014}
+\semester{Fall 2014}
 \meets{Tuesdays \& Thursdays} % \meets{on}{at}{in}
       {3:45--5:05 \PM}
       {Ballyconnor 2087}
-\website{danieldriver.com}
+\website{classes.tyndale.ca}
 \cdescription{% copy from tyndale.ca/registrar/calendar
   Survey of the redemptive story in the three major divisions of the Old
   Testament (the Law/Torah, the Prophets, and the Writings), including
@@ -49,7 +49,7 @@ end of the course students should be able to:
   give key dates for Israel's history and summarize the succession of
     superpowers in the Ancient Near Eastern political theatre from the
     time of Egypt to Greece;
-  contrast inner- and extra-biblical dating schemes;
+%  contrast inner- and extra-biblical dating schemes;
   locate ancient Israel on a map;
   understand the general shape of the Masoretic Text tradition and
     differentiate it from other canonical orders and traditions;
@@ -59,7 +59,7 @@ end of the course students should be able to:
   articulate multiple rationales for sabbath observance;
   defend a decision to pronounce or circumlocute the divine name;
   classify prophetic literature relative to the exile;
-  report on instances of duplication in both the Law and the Prophets;
+%  report on instances of duplication in both the Law and the Prophets;
   memorize and recite Psalm 8.
 
 Students should also be able to identify settings in which the
@@ -78,31 +78,36 @@ the Old Testament retains along side of the New in Christian scripture.
 \section{Required Texts \& Materials}
 \label{texts}
 
-All required texts are available in the Tyndale Bookstore. The course
-pack is available in class, directly from Dr. Driver.
+All required textbooks are available in the Tyndale Bookstore. The
+course pack is available in class, directly from Dr. Driver.
 
 \begingroup
 \renewcommand{\section}[2]{}% temporarily remove the section heading
 \begin{thebibliography}{Heschel}% use the longest item in the bibliography
-  \bibitem[ESV]{esv} \emph{The Bible, English Standard Version}.
-    Wheaton, Ill.: Crossway, 2001 (rev. 2011). For this class it is
-    important to have a common translation of the Bible. I have selected
-    the ESV because it is recent, popular, readable and fairly literal.
-    The only two allowable substitutions are the versions most cited by
-    biblical scholars, namely, the NRSV and the JPS. If you have none of
-    these, you should purchase an ESV for this class.
+  \bibitem[NRSV]{nrsv} \emph{The New Oxford Annotated Bible with Apocrypha}.
+    Oxford: Oxford University Press, 2010 (4\textsuperscript{th}
+    edition). Many serviceable translations of the Bible exist, but I
+    assign the NRSV because it is a standard among biblical scholars. If
+    you do not already have a copy then you must purchase one for this
+    class.
   \bibitem[Heschel]{heschel} Abraham Joshua Heschel.
     \emph{The Sabbath: Its Meaning for Modern Man}. New York: Farrar,
     Straus and Giroux, 1951 (repr. 2005). Read this classic example of
     20\textsuperscript{th} century Jewish spirituality on your own, no
-    later than the fifth week of class. Review it in preparation for the
+    later than the fourth week of class. Review it in preparation for the
     class on which it is assigned.
+  \bibitem[Moberly]{Moberly} R.\,W.\,L. Moberly.
+    \emph{Old Testament Theology: Reading the Hebrew Bible as Christian
+    Scripture}. Grand Rapids: Baker Academic, 2013. Read these eight
+    essays by a leading Old Testament scholar and theologian in parallel
+    with the assigned Bible readings. It will be best if you read the
+    primary texts first, of course.
   \bibitem[Driver]{driver} Daniel R. Driver.
     \emph{\ctitle\ Introductory Course Pack}. Toronto, \csemester.
     In response to the requests of many students, I have compiled a pack
-    of notes for this class. I will circulate it in two batches, at the
-    beginning and middle of the semester. It behooves you to annotate
-    and study this material carefully.
+    of notes for this class. I will circulate the relevant pages before
+    each class. It behooves you to gather, annotate, and study this
+    material carefully.
 \end{thebibliography}
 \endgroup
 
@@ -112,17 +117,16 @@ pack is available in class, directly from Dr. Driver.
 Supplementary readings are listed in the bibliographies that follow each
 page of notes in the course pack. Excerpts from this literature,
 ordinarily an article or a book chapter per week, will be available for
-download through the course website (some may be kept on reserve in the
-library). Students are not strictly required to read this supplementary
-material; then again, students who choose not to read it should not
-expect to get an A for the course.
+download through the course website (alternately, some may be kept on
+reserve in the library). Students are not strictly required to read this
+supplementary material; then again, students who choose not to read it
+should not expect to get an A for the course.
 
 Note that the required readings for this survey emphasize a selection of
 primary texts from the Old Testament. Reading in the vast body of
 secondary literature on the Bible is largely left for upper-division
 courses. Diligent students, however, and all prospective majors, will
-make a special point of reviewing the supplementary material carefully,
-since they aim at maximum understanding.
+make a special point of reviewing the supplementary material carefully.
 
 \section{Evaluation}
 \label{evaluation}
@@ -157,10 +161,10 @@ The breakdown for the semester's total work is as follows:
   \centering
   \begin{tabular}{lr}
     \toprule
-    Memorization    & 15\% \\
-    Midterm Exam    & 25\% \\
     Reading Quizzes & 25\% \\
-    Final Exam      & 35\% \\
+    Memorization    & 15\% \\
+    Midterm Exam    & 30\% \\
+    Final Exam      & 30\% \\
     \bottomrule
   \end{tabular}
   \caption{Distribution of Grades}
@@ -192,13 +196,14 @@ The breakdown for the semester's total work is as follows:
 \section{Course Outline}
 \label{outline}
 
-Readings of a given day should be completed before the start of class
-on the same date. Primary readings are compulsory. Any supplementary
-readings that I circulate (see Section~\ref{supplementary}) will
-be keyed to the session number (listed under \textbf{\S} in
-Table~\ref{schedule}), and should ideally be read before class as well.
-We will adhere to the schedule as closely as possible, though I reserve
-the right to adjust it to suit the needs of the class.
+Readings of a given day should be completed before the start of class on
+the same date. Primary readings, Heschel and Moberly are compulsory. Any
+supplementary readings that I circulate (per
+Section~\ref{supplementary}) will be keyed to the session number (listed
+under \textbf{\S} in Table~\ref{schedule}), and should ideally be read
+before class as well. We will adhere to the schedule as closely as
+possible, though I reserve the right to adjust it to suit the needs of
+the class.
 
 \newcommand\Yhwh{\textsc{Yhwh}}
 \newcommand\rarr{\char"2192\hspace*{0.5pt}}
@@ -210,35 +215,56 @@ the right to adjust it to suit the needs of the class.
     \toprule
     \sessionskip{\textbf{\S}.}&\textbf{Primary Reading}&\textbf{Secondary Reading}&\textbf{Date}\\
     \midrule
-    \unit{Beginnings}        \\
-          & When God Created                          & Psalms 8, 74, 104         &  9 Jan. \\
-          & Eden, a Garden in the East                & Genesis 1--3              &         \\
-          & \liningnums{3\,×\,10} Generations         & Genesis 4--11             & 16 Jan. \\
-          & Father Abraham and King Abimelech         & Genesis 12--36            &         \\
-          & Joseph and His Brothers                   & Genesis 37--50            & 23 Jan. \\
-          & A Wise Son; Dame Wisdom                   & Proverbs 1--9             &         \\ [1ex]
-    \unit{Egypt \& Sinai}                                                                   \\
-          & The Call of Moses and the Divine Name     & Exodus 1--6               & 30 Jan. \\
-          & Who is \Yhwh?                             & Exodus 7--15, 32--34      &         \\
-          & Ten Commandments and a Goring Ox          & Exodus 19--23             &  6 Feb. \\
-          & I Delight in Your Instruction             & Deuteronomy 1--11,        &         \\
-    \sessionskip{} &                                  & \multicolumn{2}{l}{\emph{The Sabbath} \cite{heschel}} \\
-          & \emph{Deuteros Nomos}, a Second Law       & Deuteronomy 12--26        & 13 Feb. \\
-          & Moses a Prophet? The Law and the Prophets & Deuteronomy 27--34        &         \\
-    \noclass{Reading Week (catch up on any uncompleted reading)}                  & 20 Feb. \\
-    \sessionskip{\rarr} & \textbf{Midterm Exam}       & \emph{review}             & 27 Feb. \\ [1ex]
-    \unit{Prophets \& Kings}                                                                \\
-          & Joshua: \emph{Veni, Vidi, Vici?}          & Joshua 1--13:7            &  6 Mar. \\
-          & Of Judges and Philistines                 & Judges 1--9, 13--21       &         \\
-          & Judge, Priest, Prophet, Kingmaker         & 1 Samuel 1--31            & 13 Mar. \\
-          & David's House in Weal and Woe             & 2 Samuel 1--24            &         \\
-          & A Lofty House and a House Divided         & 1 Kings 1--19             & 20 Mar. \\
-          & Assyrian Crisis and Exile to Babylon      & 2 Kings 1--10, 16--25     &         \\
-          & Isaiah of Jerusalem                       & Isaiah 1--12, 36--39      & 27 Mar. \\
-          & A Book of Twelve Prophets                 & Hosea 1--Amos 9           &         \\ [1ex]
-    \unit{Psalms}                                                                           \\
-          & The Shaping of the Psalter                & Psalms 1, 72, 89, 90, 145 &  3 Apr. \\
-          & Sinai and Zion                            & Psalms 2, 15, 24, 84, 110 &         \\
+
+    \unit{Beginnings} \\
+
+          & Psalms 8, 74, 104               & Syllabus         &  4 Sep.     \\
+          
+          & Genesis 1--11                   & Heschel (begin)  &  9 Sep.     \\
+          & Genesis 12--36                  &                  & 11 Sep.     \\
+          
+          & Genesis 37--50                  &                  & 16 Sep.     \\
+          & Exodus 1--6, 32--34             &                  & 18 Sep.     \\ [1ex]
+
+    \unit{Out of Egypt} \\
+          
+          & Exodus 7--24                    & Moberly 3        & 23 Sep.     \\
+          & Exodus 20, Deuteronomy 5        & Heschel (finish) & 25 Sep.     \\
+          
+          & Deuteronomy 1--11               & Moberly 1        & 30 Sep.     \\
+          & Deuteronomy 12--26              &                  &  2 Oct.     \\
+          
+          & Deuteronomy 27--34              & Moberly 2        &  7 Oct.     \\ [1ex]
+
+    \unit{In the Land} \\
+
+          & Joshua 1--13:7, 22--24          &                  &  9 Oct.     \\
+          
+          & Judges 1--16, 19--21            & Moberly 4        & 14 Oct.     \\
+          & 1 Samuel 1--15                  &                  & 16 Oct.     \\
+          
+          & \textbf{Midterm Exam} (\& Essay Due If Assigned) & & 21 Oct.     \\
+    \noclass{Reading Days}                                     & 23--24 Oct. \\
+    
+          & 1 Samuel 16--31, 2 Samuel 1--12 &                  & 28 Oct.     \\
+          & 1 Kings 1--14                   &                  & 30 Oct.     \\
+          
+          & 2 Kings 17--25                  &                  &  4 Nov.     \\ [1ex]
+    \unit{Latter Prophets} \\
+          & Isaiah 1--12, 36--39            & Moberly 5        &  6 Nov.     \\
+
+          & Hosea 1-14, Joel 1--3           &                  & 11 Nov.     \\
+          & Amos 1--9, Obadiah, Jonah 1--4  & Moberly 6        & 13 Nov.     \\ [1ex]
+          
+    \unit{Wisdom \& Praise} \\
+
+          & Job 1--11                       &                  & 18 Nov.     \\
+          & Job 27--31, 38--42              & Moberly 8        & 20 Nov.     \\ 
+          
+          & Ecclesiastes 1--12              &                  & 25 Nov.     \\
+          & Psalms 1--2, 44, 51, 72--73, 89--90, 105--106, 145, 150 & Moberly 7 & 27 Nov. \\ [1ex]
+          
+    \noclass{Reading Days}                                               & 2--3 Dec.   \\
     \bottomrule
   \end{tabular}
   \caption{Schedule of Readings}
@@ -253,10 +279,10 @@ week of class.
 \section{Course Bibliography}
 \label{bibliography}
 
-An introductory bibliography is provided at the end of each page
-of notes in the course pack. Pursue this material as your interest
-dictates, or if you wish to check my handling of any of the material
-I present. Be sure to pay special attention to items flagged as
-supplementary reading (Section~\ref{supplementary}).
+An introductory bibliography is provided at the end of each page of
+notes in the course pack. Pursue this material as your interest
+dictates, or if you wish to check my handling of any of the material I
+present. Pay special attention to items flagged as supplementary reading
+(Section~\ref{supplementary}).
 
 \end{document}
