shorten Weather info link notice

--- a/includes/title.tex
+++ b/includes/title.tex
@@ -42,10 +42,10 @@
 
     \begin{description}\footnotesize
       \item[Commuter Hotline]
-        Class cancellations due to inclement weather or
-        illness will be announced on the commuter hotline at
+        Class cancellations due to inclement weather or illness will be
+        announced on the commuter hotline at
         {\addfontfeatures{Numbers=Monospaced} 416.226.6620 x2187}.
-        Alternately, weather cancellation information is posted at
+        Weather information is also posted at
         \href{http://tyndale.ca/weather}{tyndale.ca/weather}.
       \item[MyTyndale.ca]
         This course may have materials stored on its website, such as
