combine support policies into one file

--- a/template/000_template.tex
+++ b/template/000_template.tex
@@ -237,11 +237,7 @@ The breakdown for the semester's total work is as follows:
 \input{\policy/attendance}
 \input{\policy/technology}
 
-\section{Student Support}
-\label{support}
-
-\input{\policy/writing_centre}
-\input{\policy/accommodation}
+\input{\policy/support}
 
 \section{Course Outline}
 \label{outline}
