compress / tighten some policy

--- a/policy/exams.tex
+++ b/policy/exams.tex
@@ -17,22 +17,25 @@ summarized below for emphasis.
     location of their final exam in this class. Students are also responsible
     for familiarizing themselves with the Registrar's examination policies.
   \item
-    The following rules apply to every final examination:
-    \begin{enumerate}
-      \item
-        No student is permitted to take into the examination room any materials
-        relating to the examination subject, including Bibles.
-      \item
-        No student may leave the room without permission from the proctor.
-      \item
-        No student may leave his or her seat during the final fifteen minutes.
-      \item
-        Students must not linger in the halls outside the examination rooms
-        while examinations are being written.
-      \item
-        No student will be permitted to write beyond the allotted time without
-        special permission of the Registrar (see Section~\ref{accommodation}).
-    \end{enumerate}
+    Special rules apply when midterms and finals are held, including one that
+    prohibits students from leaving their seats during the final fifteen minutes
+    of the exam period. See the \AC\ for full details.
+%    The following rules apply to every final examination:
+%    \begin{enumerate}
+%      \item
+%        No student is permitted to take into the examination room any materials
+%        relating to the examination subject, including Bibles.
+%      \item
+%        No student may leave the room without permission from the proctor.
+%      \item
+%        No student may leave his or her seat during the final fifteen minutes.
+%      \item
+%        Students must not linger in the halls outside the examination rooms
+%        while examinations are being written.
+%      \item
+%        No student will be permitted to write beyond the allotted time without
+%        special permission of the Registrar (see Section~\ref{accommodation}).
+%    \end{enumerate}
   \item
     Provisions exist for students who are justifiably unable to write the final
     exam at the scheduled time. See the \AC\ for details, and make arrangements
