--- a/policy/technology.tex
+++ b/policy/technology.tex
@@ -19,15 +19,14 @@ I myself aim to check my school email at the beginning and end of each workday.
 At other times my email client is often closed. I will try to answer your
 messages within 24 hours, though you should not expect replies on weekends.
 
-\subsubsection{MyTyndale.ca}
+\subsubsection{MyTyndale.ca / classes.tyndale.ca}
 \label{mytyndale}
 
-The \href{http://mytyndale.ca}{mytyndale.ca} course pages are an efficient
-means of distributing handouts, notes, slides, and other course-related
-materials. This is also where instructors log attendance and upload grades for
-assignments. Students are therefore required to check the site for updates
-about their classes as well as for any materials needed for lectures and
-assignments.
+Tyndale's course pages are an efficient means of distributing handouts, notes,
+slides, and other course-related materials. This is also where instructors log
+attendance and upload grades for assignments. Students are therefore required to
+check the site for updates about their classes as well as for any materials
+needed for lectures and assignments.
 
 My own use of this platform varies from semester to semester, and from
 course to course. At times I may ask you to use the forums, quiz module, or
@@ -53,38 +52,35 @@ shown many times. Rather, their novel discovery is that classmates
 did worse than the students who had a computer (17\% worse than those with no
 laptop in sight).
 
-Prohibiting laptops is not the only possible response to these findings, but it
-fits with other pedagogical goals of mine. There is even evidence that
-\href{http://on.wsj.com/pjtJaK}{writing by hand} brings a number of cognitive
-benefits, and a \href{http://dx.doi.org/10.1177/0956797614524581}{2014 Princeton
-University study} ``found that students who took notes on laptops performed
-worse on conceptual questions than students who took notes longhand.'' If you
-are a heavy laptop user then consider this an opportunity to experiment with
-different technologies in the classroom. Personally, I find hadwritten notes
-more useful because of the selectivity that goes into them. I type up some
-important notes afterwards as a way of reviewing them.
+Prohibiting laptops is not the only possible response to these findings.
+However, there is evidence that \href{http://on.wsj.com/pjtJaK}{writing by hand}
+brings a number of cognitive benefits, and a
+\href{http://dx.doi.org/10.1177/0956797614524581}{2014 Princeton University
+study} ``found that students who took notes on laptops performed worse on
+conceptual questions than students who took notes longhand.'' If you are a heavy
+laptop user then consider this an opportunity to experiment with different
+technologies in the classroom.
 
 As for the myriad networked devices that many of us carry, it's a simple matter
-of professionalism to keep these things silent and out of sight. E-readers
-(Kindles, Nooks, iPads, etc.) are permitted \emph{only if they are used to
-display the assigned reading}. If this is you, let me invite you to put the
+of professionalism to keep these things silent and out of sight. E-readers and
+tablets are permitted \emph{only if they are used to display the assigned
+reading}. If this is how you choose to read, let me invite you to put the
 machine in airplane mode while class is in session.
 
 \subsubsection{Recording of Classes}
 \label{recording}
 
-Students must request permission from the professor of any class that they
-would like to record. Where permission is granted, students are expected to
-supply their own equipment.
+Students must request permission from the professor of any class that they would
+like to record. Where permission is granted, students are expected to supply
+their own equipment.
 
-I generally prefer not to have my classes recorded, and I am not at all
-friendly to being recorded without my knowledge. In cases where I grant
-permission, I stipulate that the recordings must be for personal use only. They
-should not be shared with other students at Tyndale, even in the same section,
-and they absolutely must not be posted online in any format (including, say,
-transcribed for a blog post).
+I prefer not to have my classes recorded, and I am not at all friendly to being
+recorded without my knowledge. In cases where I grant permission, I stipulate
+that the recordings must be for personal use only. They should not be shared
+with other students at Tyndale, even in the same section, and they absolutely
+must not be posted online in any format.
 
-If a student is not able to attend a lecture and would like to have it
-recorded, it is the responsibility of the student to obtain the professor's
-permission, find another student to record the lecture, and supply that student
-with the recording device.
+If a student is not able to attend a lecture and would like to have it recorded,
+it is the responsibility of the student first to obtain the professor's
+permission, and then to find another student to record the lecture. I will not
+make the recording for you.
