change default rule for schedule table positioning

--- a/BSTH/1013.tex
+++ b/BSTH/1013.tex
@@ -205,7 +205,7 @@ the class.
 \newcommand\rarr{\char"2192\hspace*{0.5pt}}
 
 \setcolumncount{4} % set up \sessioncount, \unit{} and \noclass{} macros
-\begin{table}[phtb]
+\begin{table}[htb]
   \centering
   \begin{tabular}{>{\sessioncount.}r@{ }llr}
     \toprule
