--- a/template/000_template.tex
+++ b/template/000_template.tex
@@ -254,7 +254,7 @@ the right to adjust it to suit the needs of the class.
 \newcommand\rarr{\char"2192\hspace*{0.5pt}}
 
 \setcolumncount{4} % set up \sessioncount, \unit{} and \noclass{} macros
-\begin{table}[phtb]
+\begin{table}[htb]% add p to put the schedule on its own page
   \centering
   \begin{tabular}{>{\sessioncount.}r@{ }llr}
     \toprule
