tweak template with 2014 office hours, website

--- a/template/000_template.tex
+++ b/template/000_template.tex
@@ -14,13 +14,13 @@
 \professor{Daniel R. Driver} % terminal degree is PhD unless \cmd[DPhil]{}
 \phone{416.226.6620 x2201}
 \email{ddriver@tyndale.ca}
-\officehours{Mon. \& Wed., 2:30--4:30 \PM}% in Ballyconnor 1088 unless \cmd[moved]{}
+\officehours{Mon. \& Thur., 1:30--3:30 \PM}% in Ballyconnor 1088 unless \cmd[moved]{}
 
 \semester{Winter 2014}
 \meets{Mondays \& Wednesdays} % \meets{on}{at}{in}
-      {8:30 \AM--9:50 \AM}
+      {8:15--9:35 \AM}
       {Ballyconnor 2087}
-\website{danieldriver.com} % omit http://
+\website{classes.tyndale.ca} % omit http://
 \cdescription{% copy from tyndale.ca/registrar/calendar
   Survey of the redemptive story in the three major divisions of the Old
   Testament (the Law/Torah, the Prophets, and the Writings), including
